--- a/src/main/resources/templates/WebQuanLy/voucher-list.html
+++ b/src/main/resources/templates/WebQuanLy/voucher-list.html
@@ -263,7 +263,10 @@
                     <option value="">-- Kiểu --</option>
                     <option value="PERCENT" th:selected="${type == 'PERCENT'}">%</option>
                     <option value="CASH" th:selected="${type == 'CASH'}">Tiền mặt</option>
+                    <option value="FREESHIP_FULL" th:selected="${type == 'FREESHIP_FULL'}">Freeship toàn phần</option>
+                    <option value="FREESHIP_CAP" th:selected="${type == 'FREESHIP_CAP'}">Freeship một phần</option>
                 </select>
+
             </div>
             <div class="col-md-2">
                 <label class="form-label">Trạng thái</label>
